DigicielFull/force-app/main/default/objects/ServiceRequestSetup__c/fields/Interco__c.field-meta.xml
<CustomField>
    <fullName>Interco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interco</label>
    <type>Checkbox</type>
</CustomField>