DigicielFull/force-app/main/default/objects/ServiceRequestSetup__c/fields/ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>ProductInterest__c</fullName>
    <label>Product interest</label>
    <length>155</length>
    <type>Text</type>
</CustomField>