DigicielFull/force-app/main/default/objects/ServiceRequestSetup__c/fields/ProductionType__c.field-meta.xml
<CustomField>
    <fullName>ProductionType__c</fullName>
    <label>Type de Production</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>VPN</fullName>
            </value>
            <value>
                <fullName>Services Voix</fullName>
            </value>
            <value>
                <fullName>Matériel</fullName>
            </value>
            <value>
                <fullName>Sécurité</fullName>
            </value>
            <value>
                <fullName>Hébergement</fullName>
            </value>
            <value>
                <fullName>Prestations (ingénierie etc…)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>