DigicielFull/force-app/main/default/objects/ServiceRequestSetup__c/fields/ServiceRequestDetails__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequestDetails__c</fullName>
    <label>Service Request Details</label>
    <type>TextArea</type>
</CustomField>